# AutoDesingDoc

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: orchestrate.yml  test.yml
config/: repos.yaml
design/: design.md  requirement.txt
src/: config_loader.py  main.py  validate.py
src/counter/: file_filter.py  hysteresis_evaluator.py
src/document/: doc_namer.py  doc_writer.py  merge_handler.py
src/llm/: base.py  claude_client.py
src/pipeline/: cross_ref_linker.py  file_mapper.py  folder_reducer.py
src/trigger/: ast_analyzer.py  diff_analyzer.py
src/vcs/: base.py  github_adapter.py  perforce_adapter.py
tests/integration/: test_map_reduce_pipeline.py
tests/unit/: test_ast_analyzer.py  test_config_loader.py  test_diff_analyzer.py  test_doc_namer.py  test_doc_writer.py  test_file_filter.py  test_hysteresis_evaluator.py
